--- a/QL_CAFE/GUI/GUI.csproj
+++ b/QL_CAFE/GUI/GUI.csproj
@@ -47,11 +47,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DangNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DangNhap.Designer.cs">
+      <DependentUpon>DangNhap.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QLBANHANG.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QLBANHANG.Designer.cs">
+      <DependentUpon>QLBANHANG.cs</DependentUpon>
     </Compile>
     <Compile Include="QLNGUYENLIEU.cs">
       <SubType>Form</SubType>
@@ -67,8 +79,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DangNhap.resx">
+      <DependentUpon>DangNhap.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QLBANHANG.resx">
+      <DependentUpon>QLBANHANG.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="QLNGUYENLIEU.resx">
       <DependentUpon>QLNGUYENLIEU.cs</DependentUpon>
